--- a/src/app/Components/order-placed/order-placed.component.html
+++ b/src/app/Components/order-placed/order-placed.component.html
@@ -3,11 +3,9 @@
         <p class="Heading1">Thank you for your order</p>
         <p class="Heading2">Your order has been placed and is being processed</p>
         <p class="Heading4">Your order is ready to be delivered at </p>
-        <p class="Heading4">{{orderDeliverAddress.address}}</p>
-        <p class="Heading4">{{orderDeliverAddress.pincode}}</p>
-        <p class="Heading4">{{orderDeliverAddress.city}}</p>
-        <p class="Heading4">{{orderDeliverAddress.state}}</p>
-        <p class="Heading4">{{orderDeliverAddress.country}}</p>
+        <p class="Heading4">{{orderDeliverAddress.address}}, &nbsp;{{orderDeliverAddress.pincode}},
+            &nbsp;{{orderDeliverAddress.city}}, &nbsp;{{orderDeliverAddress.state}},
+            &nbsp;{{orderDeliverAddress.country}}</p>
         <p class="Heading3">Order Id : {{order_id}}</p>
         <p class="BackToHome">
             <a class="btn HomePage" routerLink="" routerLinkActive="Active">
