--- a/src/app/Components/categories-carousel/categories-carousel.component.scss
+++ b/src/app/Components/categories-carousel/categories-carousel.component.scss
@@ -47,6 +47,19 @@ a {
     text-align: center;
 }
 
+.col-3 {
+    padding: 0;
+}
+
+.card-group {
+    margin: 60px;
+}
+
+.card {
+    height: 350px;
+    margin: 20px;
+}
+
 .card-title {
     text-align: center;
     color: #4287f5;
