--- a/src/app/Components/thankyou-subscribing/thankyou-subscribing.component.html
+++ b/src/app/Components/thankyou-subscribing/thankyou-subscribing.component.html
@@ -1,5 +1,5 @@
 <div>
-    <img src="assets/ThanksSubscribe/handshake.jpg" alt="Snow" style="width:100%;">
+    <img src="assets/ThanksSubscribe/handshake.jpg" alt="Snow" style="width:100%; height: 650px;">
     <div class="centered">
         <p>Thank you</p>
         <p>{{email}}</p>
