--- a/src/app/Components/cart/cart.component.scss
+++ b/src/app/Components/cart/cart.component.scss
@@ -169,3 +169,12 @@ a.Edit {
 .formButtons{
     padding-top: 20px;
 }
+
+.nav-link {
+    padding: 0rem;
+}
+
+.nav-link:hover {
+    color: #4287f5;
+    text-decoration: underline;
+}
