--- a/src/app/Components/productdetails/productdetails.component.html
+++ b/src/app/Components/productdetails/productdetails.component.html
@@ -1,10 +1,12 @@
 <div class="container">
 
-    <div class="col-md-6 mt-md-0">
+    <div class="col-md-6">
         <ngx-image-zoom [thumbImage]=myThumbnail [fullImage]=myFullresImage [magnification]="1"
-            [enableScrollZoom]="true" [enableLens]="true" [lensWidth]="150"></ngx-image-zoom>
-        <div class="col-md-4" *ngFor="let s of productDetailsDetailsArray.subImages_id.product_subImages">
-            <img class="d-block ProductSubImage" src="{{imageUrl}}{{s}}" (click)="changeProductImage(s)">
+            [enableScrollZoom]="true" [enableLens]="true" [lensWidth]="200"></ngx-image-zoom>
+        <div style="width: 520px; height: 120px; overflow-y: scroll;">
+            <div class="col-md-4" *ngFor="let s of productDetailsDetailsArray.subImages_id.product_subImages">
+                <img class="d-block ProductSubImage" src="{{imageUrl}}{{s}}" (click)="changeProductImage(s)">
+            </div>
         </div>
     </div>
 
@@ -31,7 +33,7 @@
                 </div>
             </div>
 
-            <p class="Share">Share <span class="glyphicon glyphicon-share-alt"></span></p>
+            <!-- <p class="Share">Share <span class="glyphicon glyphicon-share-alt"></span></p> -->
 
             <!-- <style>
                 .fa {
@@ -80,14 +82,14 @@
                 <a href="#" class="fa fa-pinterest"></a>
                 <a href="#" class="fa fa-twitter"></a>
             </body> -->
-            <div>
+            <!-- <div>
                 <div class="row">
                     <div class="col-3 fb">
                         <fb-like></fb-like>
                     </div>
-                    <!-- <div class="col-2 google">
+                    <div class="col-2 google">
                         <google-plus></google-plus>
-                    </div> -->
+                    </div>
                     <div class="col-2 tweet">
                         <tweet></tweet>
                     </div>
@@ -98,7 +100,7 @@
                         <pin-it></pin-it>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <p>
                 <button type="button" class="btn btn-primary" (click)="addToCart()">ADD TO CART</button>
