--- a/src/app/Components/allproducts/allproducts.component.scss
+++ b/src/app/Components/allproducts/allproducts.component.scss
@@ -1,9 +1,7 @@
-.nav-link {
-    padding: 0rem;
-}
-
-a {
-    color: #000000;
+.socialbutton {
+    margin-left: 10px;
+    border-right: 3px solid #000000;
+    margin-right: 50px;
 }
 
 .btn-info { 
@@ -11,51 +9,6 @@ a {
     border-color: #FFFFFF;
     color: #000000;
     border: 1px solid #CDCDCD;
-}
-
-.btn-primary { 
-    background-color: #EB4539;
-    border-color: #EB4539;
-    color: #FFFFFF;
-}
-
-.btn-secondary {
-    height: 30px;
-    width: 45px;
-    margin: 5px;
-    border-color: #000000;
-}
-
-.button {
-    text-align: center;
-}
-
-.card-title {
-    color: #4287f5;
-    font-size: 15px;
-}
-
-.card-text {
-    font-size: 15px;
-    font-weight: bold;
-}
-
-.card-img-top {
-    height: 150px;
-    padding: 15px;
-}
-
-.nav-link {
-    color: #4287f5;
-}
-
-.nav-link:hover {
-    color: #4287f5;
-    text-decoration: underline;
-}
-
-.star {
-    text-align: center;
 }
 
 .ContactFormTitle {
@@ -70,30 +23,92 @@ a {
 }
 
 .btn-default {
-    color: #3C5BFF;
+    color: #4A3DB5;
     border: none;
     font-size: 20px;
+}
+
+.nav-link {
+    padding: 0rem;
+    color: #4A3DB5;
+}
+
+.nav-link:hover {
+    color: #4A3DB5;
+    text-decoration: underline;
+}
+
+a {
+    color: #000000;
+}
+
+.card {
+    height: 350px;
+    margin: 20px;
+    border: 1px solid #4A3DB5;
+}
+
+.card-img-top {
+    height: 150px;
+    padding: 15px;
+}
+
+.thumbnail:hover {
+    border: 10px solid #000000;
+}
+
+.card-title {
+    color: #4A3DB5;
+    font-size: 15px;
+    text-align: center;
+}
+
+.card-text {
+    font-size: 15px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.button {
+    text-align: center;
+}
+
+a.btn.btn-light {
+    color: #FFFFFF;
+}
+
+a.btn.btn-light:hover {
+    color: #FFFFFF;
+}
+
+.btn-light {
+    background:#4A3DB5;
+    color: #FFFFFF;
+}
+
+.btn-light:hover {
+    background: #4A3DB5;
+    border: 2px solid #000000;
+    color: #FFFFFF;
+}
+
+.star {
+    text-align: center;
+}
+
+.btn-secondary {
+    height: 30px;
+    width: 45px;
+    margin: 5px;
+    border-color: #000000;
 }
 
 .card-footer {
     background-color: transparent;
     border: none;
+    text-align: center;
 }
 
 .notFound {
     text-align: center;
-}
-
-.socialbutton {
-    margin-left: 10px;
-    border-right: 3px solid #000000;
-    margin-right: 50px;
-}
-
-.card-footer {
-    text-align: center;
-}
-
-.thumbnail:hover {
-    border: 10px solid #000000;
 }
