--- a/src/app/Components/categories-carousel/categories-carousel.component.scss
+++ b/src/app/Components/categories-carousel/categories-carousel.component.scss
@@ -6,8 +6,16 @@
     height: 400px;
 }
 
+.carousel-inner>.item>a>img, .carousel-inner>.item>img, .img-responsive, .thumbnail a>img, .thumbnail>img {
+    height: 400px;
+}
+
 .w-100 {
     height: 400px;
+}
+
+.thumbnail:hover {
+    border: 10px solid #000000;
 }
 
 .PopularProducts {
@@ -15,6 +23,7 @@
     font-weight: bold;
     margin-top: 60px;
     font-size: 25px;
+    color: #4A3DB5;
 }
 
 .ViewAll {
@@ -24,45 +33,45 @@
 }
 
 .nav-link {
+    color: #4A3DB5;
     padding: 0rem;
+}
+
+.nav-link:hover {
+    color: #4A3DB5;
+    text-decoration: underline;
+}
+
+.viewall {
+    color: #000000;
 }
 
 a {
     color: #000000;
 }
 
-.btn-primary { 
-    background-color: #E96137;
-    border-color: #E96137;
-    color: #FFFFFF;
-}
-
-.btn {
-    background-color: #E96137;
-    border-color: #E96137;
-    color: #FFFFFF;
-}
-
-.button {
-    text-align: center;
+.card-group {
+    margin: 60px;
 }
 
 .col-3 {
     padding: 0;
 }
 
-.card-group {
-    margin: 60px;
-}
-
 .card {
     height: 350px;
     margin: 20px;
+    border: 1px solid #4A3DB5;
+}
+
+.card-img-top {
+    height: 150px;
+    padding: 15px;
 }
 
 .card-title {
     text-align: center;
-    color: #4287f5;
+    color: #4A3DB5;
     font-size: 15px;
 }
 
@@ -72,32 +81,29 @@ a {
     font-weight: bold;
 }
 
-.card-img-top {
-    height: 150px;
-    padding: 15px;
+.button {
+    text-align: center;
 }
 
-.nav-link {
-    color: #4287f5;
+a.btn.btn-light {
+    color: #FFFFFF;
 }
 
-.nav-link:hover {
-    color: #4287f5;
-    text-decoration: underline;
+a.btn.btn-light:hover {
+    color: #FFFFFF;
 }
 
-.viewall {
-    color: #000000;
+.btn-light {
+    background:#4A3DB5;
+    color: #FFFFFF;
 }
 
-.carousel-inner>.item>a>img, .carousel-inner>.item>img, .img-responsive, .thumbnail a>img, .thumbnail>img {
-    height: 400px;
+.btn-light:hover {
+    background: #4A3DB5;
+    border: 2px solid #000000;
+    color: #FFFFFF;
 }
 
 .star {
     text-align: center;
-}
-
-.thumbnail:hover {
-    border: 10px solid #000000;
 }
