--- a/src/app/Components/productdetails/productdetails.component.scss
+++ b/src/app/Components/productdetails/productdetails.component.scss
@@ -2,6 +2,11 @@
     padding-top: 30px;
 }
 
+::ng-deep .ngxImageZoomContainer > img{
+    max-height: 200px!important;
+    min-width: 480px!important;
+} 
+
 .ProductSubImage {
     margin-top: 15px;
     height: 80px;
@@ -13,6 +18,17 @@
     margin-top: 35px;
     font-size: 20px;
     font-weight: bold;
+    color: #4A3DB5;
+}
+
+.details {
+    border-top: 1px solid #CDCDCD;
+    margin-top: 10px;
+}
+
+.PriceLabel {
+    margin-top: 10px;
+    font-size: 15px;
 }
 
 .Price {
@@ -23,14 +39,58 @@
    padding: 0px;
 }
 
-.PriceLabel {
-    margin-top: 10px;
-    font-size: 15px;
+a.btn.btn-light {
+    color: #FFFFFF;
 }
 
-.details {
-    border-top: 1px solid #CDCDCD;
+a.btn.btn-light:hover {
+    color: #FFFFFF;
+}
+
+.btn-light {
+    background:#4A3DB5;
+    color: #FFFFFF;
     margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    margin-left: 0px;
+}
+
+.btn-light:hover {
+    background: #4A3DB5;
+    border: 2px solid #000000;
+    color: #FFFFFF;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    margin-left: 0px;
+}
+
+a.btn.btn-light1 {
+    color: #FFFFFF;
+}
+
+a.btn.btn-light1:hover {
+    color: #FFFFFF;
+}
+
+.btn-light1 {
+    background:#FCA912;
+    color: #FFFFFF;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    margin-left: 0px;
+}
+
+.btn-light1:hover {
+    background: #FCA912;
+    border: 2px solid #000000;
+    color: #FFFFFF;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    margin-left: 0px;
 }
 
 .Share {
@@ -38,42 +98,16 @@
     font-size: 20px;
 }
 
-.btn-primary {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-right: 10px;
-    margin-left: 0px;
-    background: #29A7EC;
-}
-
-.btn-danger {
-    margin: 10px;
-    background: #744D12;
-}
-
 .mattab {
     margin-left: 90px;
     margin-right: 90px;
     margin-top: 20px;
+    color: #4A3DB5;
 }
 
-.btn-light {
-    color: #A3A3A3;
-    background-color: #DEDEDE;
-    border-color: #DEDEDE;
-}
-
-.divalign {
-    text-align: center;
-    margin-top: 10px;
-    font-size: 20px;
+.FeatureHeadings {
     font-weight: bold;
 }
-
-::ng-deep .ngxImageZoomContainer > img{
-    max-height: 200px!important;
-    min-width: 480px!important;
-} 
 
 .fb {
     padding: 0px;
