--- a/src/app/Components/cart/cart.component.html
+++ b/src/app/Components/cart/cart.component.html
@@ -175,7 +175,7 @@
                     Add Address
                 </button>
                 <button type="button" class="btn" [style.background-color]="placeButtonColor"
-                    [style.color]="placeButtonTextColor" [disabled]="!placeOrderButton" (click)="placeOrder()">
+                    [style.color]="placeButtonTextColor" [style.border]="placeButtonBorder" [disabled]="!placeOrderButton" (click)="placeOrder()">
                     Place Order
                 </button>
             </p>
