--- a/src/app/Components/contactform/contactform.component.scss
+++ b/src/app/Components/contactform/contactform.component.scss
@@ -128,11 +128,11 @@ input:focus + label {
 }
 
 .btn-light {
-    background: #3D40A1;
+    background: #4A3DB5;
     color: #FFFFFF;
 }
 
 .btn-light:hover {
-    background: #3D40A1;
+    background: #4A3DB5;
     color: #FFFFFF;
 }
