--- a/src/app/Components/login/login.component.scss
+++ b/src/app/Components/login/login.component.scss
@@ -146,12 +146,12 @@ input:focus + label {
 }
 
 .btn-light {
-    background: #3D40A1;
+    background: #4A3DB5;
     color: #FFFFFF;
 }
 
 .btn-light:hover {
-    background: #3D40A1;
+    background: #4A3DB5;
     color: #FFFFFF;
 }
 
@@ -167,7 +167,7 @@ a {
 }
 
 a:hover {
-    color: #3D40A1;
+    color: #4A3DB5;
     font-weight: bold;
     text-decoration: underline;
 }
