--- a/src/app/Components/order-placed/order-placed.component.scss
+++ b/src/app/Components/order-placed/order-placed.component.scss
@@ -29,7 +29,7 @@
 }
 
 a.HomePage {
-    background: #4548B5;
+    background: #4A3DB5;
     color: #FFFFFF;
     margin-left: 5px;
     margin-right: 5px;
