--- a/src/app/Components/add-address/add-address.component.scss
+++ b/src/app/Components/add-address/add-address.component.scss
@@ -164,11 +164,11 @@ a.btn.btn-light:hover {
 }
 
 .btn-light {
-    background: #3D40A1;
+    background: #4A3DB5;
     color: #FFFFFF;
 }
 
 .btn-light:hover {
-    background: #3D40A1;
+    background: #4A3DB5;
     color: #FFFFFF;
 }
