--- a/src/app/Components/cart/cart.component.scss
+++ b/src/app/Components/cart/cart.component.scss
@@ -4,7 +4,7 @@
 }
 
 .badge {
-    background: #4548B5;
+    background: #4A3DB5;
     font-size: 20px;
     border-radius: 50%;
 }
@@ -28,7 +28,7 @@
 }
 
 a.Buy {
-    background: #4548B5;
+    background: #4A3DB5;
     color: #FFFFFF;
     margin-left: 5px;
     margin-right: 5px;
@@ -107,7 +107,7 @@ a.Buy {
 }
 
 a.Return {
-    background: #4548B5;
+    background: #4A3DB5;
     color: #FFFFFF;
     margin-left: 5px;
     margin-right: 5px;
@@ -132,7 +132,7 @@ a.Return {
 }
 
 a.Add {
-    background: #4548B5;
+    background: #4A3DB5;
     color: #FFFFFF;
     margin-left: 5px;
     margin-right: 5px;
@@ -146,7 +146,7 @@ a.Add {
 }
 
 a.Edit {
-    background: #4548B5;
+    background: #4A3DB5;
     color: #FFFFFF;
     margin-top: 7px;
 }
@@ -155,15 +155,25 @@ a.Edit {
     margin-top: 15px;
 }
 
+a.btn.btn-light {
+    color: #FFFFFF;
+}
+
+a.btn.btn-light:hover {
+    color: #FFFFFF;
+}
+
 .btn-light {
-    background: #DEDEDE;
-    color: #A3A3A3;
+    background:#4A3DB5;
+    color: #FFFFFF;
     margin-right: 10px;
 }
 
 .btn-light:hover {
-    background: #3D40A1;
+    background: #4A3DB5;
+    border: 2px solid #000000;
     color: #FFFFFF;
+    margin-right: 10px;
 }
 
 .formButtons{
