--- a/src/app/Components/profile/profile.component.scss
+++ b/src/app/Components/profile/profile.component.scss
@@ -4,7 +4,7 @@
 }
 
 .badge {
-    background: #4548B5;
+    background: #4A3DB5;
     font-size: 20px;
     border-radius: 50%;
 }
@@ -39,7 +39,7 @@
 }
 
 a.Buy {
-    background: #4548B5;
+    background: #4A3DB5;
     color: #FFFFFF;
     margin-left: 5px;
     margin-right: 5px;
@@ -122,7 +122,7 @@ a.Buy {
 }
 
 a.Return {
-    background: #4548B5;
+    background: #4A3DB5;
     color: #FFFFFF;
     margin-left: 5px;
     margin-right: 5px;
@@ -143,7 +143,7 @@ a.Return {
 }
 
 a.Add {
-    background: #4548B5;
+    background: #4A3DB5;
     color: #FFFFFF;
     margin-left: 5px;
     margin-right: 5px;
@@ -162,7 +162,7 @@ a.Add1 {
 }
 
 a.Add1:hover {
-    background: #4548B5;
+    background: #4A3DB5;
     color: #FFFFFF;
 }
 
@@ -173,7 +173,7 @@ a.Add1:hover {
 }
 
 a.Edit {
-    background: #4548B5;
+    background: #4A3DB5;
     color: #FFFFFF;
     margin-top: 7px;
 }
@@ -189,7 +189,7 @@ a.Edit {
 }
 
 .btn-light:hover {
-    background: #3D40A1;
+    background: #4A3DB5;
     color: #FFFFFF;
 }
 
@@ -305,12 +305,12 @@ a.btn.btn-light:hover {
 }
 
 .btn-light {
-    background: #3D40A1;
+    background: #4A3DB5;
     color: #FFFFFF;
 }
 
 .btn-light:hover {
-    background: #3D40A1;
+    background: #4A3DB5;
     color: #FFFFFF;
 }
 
@@ -456,7 +456,7 @@ input:focus + label {
 }
 
 .DateTime {
-    color: #3D40A1;
+    color: #4A3DB5;
 }
 
 .Cost {
