--- a/src/app/Components/categories-carousel/categories-carousel.component.html
+++ b/src/app/Components/categories-carousel/categories-carousel.component.html
@@ -34,7 +34,7 @@
             {{p.DashboardProducts[0].product_name}}
           </a>
         </h5>
-        <p class="card-text">₹ {{p.DashboardProducts[0].product_cost}}</p>
+        <p class="card-text">{{p.DashboardProducts[0].product_cost | currency:'INR' }}</p>
         <p class="button"><a class="btn btn-light" (click)="addToCart(p.DashboardProducts[0])">Add To Cart</a></p>
         <p class="star">
           <star-rating value="{{p.DashboardProducts[0].product_rating}}" checkedcolor="orange" uncheckedcolor="black"
