confirmation on cart

--- a/src/app/Components/confirmation/confirmation.component.html
+++ b/src/app/Components/confirmation/confirmation.component.html
@@ -1,5 +1,5 @@
 <mat-dialog-content>
-    <p class="RatingHeading">Do you want to logout?</p>
+    <p class="RatingHeading">{{dialogHeading}}</p>
 </mat-dialog-content>
 <mat-dialog-actions align="center">
     <button type="button" class="btn btn-light1" (click)="yes()">Yes</button>&nbsp;
