--- a/src/app/Components/footersection/footersection.component.html
+++ b/src/app/Components/footersection/footersection.component.html
@@ -26,7 +26,8 @@
                     </a>
                 </p>
                 <p class="AboutCompany1">
-                    <a class="nav-link" href="#" routerLink="contactform" routerLinkActive="Active">
+                    <a class="nav-link" href="#" routerLink="contactform" routerLinkActive="Active"
+                        (click)="contactUs()">
                         Contact Us
                     </a>
                 </p>
