--- a/src/app/Components/productdetails/productdetails.component.html
+++ b/src/app/Components/productdetails/productdetails.component.html
@@ -2,7 +2,7 @@
 
     <div class="col-md-6">
         <ngx-image-zoom [thumbImage]=myThumbnail [fullImage]=myFullresImage [magnification]="1"
-            [enableScrollZoom]="true" [enableLens]="true" [lensWidth]="200"></ngx-image-zoom>
+            [enableScrollZoom]="true" [enableLens]="true" [lensWidth]="250" [lensHeight]="150"></ngx-image-zoom>
         <div style="width: 520px; height: 120px; overflow-y: scroll;">
             <div class="col-md-4" *ngFor="let s of productDetailsDetailsArray.subImages_id.product_subImages">
                 <img class="d-block ProductSubImage" src="{{imageUrl}}{{s}}" (click)="changeProductImage(s)">
