login link on register page

--- a/src/app/Components/register/register.component.html
+++ b/src/app/Components/register/register.component.html
@@ -63,6 +63,9 @@
 
         <p class="RegisterButton">
             <button type="button" class="btn btn-light" (click)="formValidation()">Register</button>
+            <a class="nav-link viewall" routerLink="login" routerLinkActive="Active" (click)="gotologin()">
+                Login if already registered ?
+            </a>
         </p>
 
     </form>
