--- a/src/app/Components/register/register.component.scss
+++ b/src/app/Components/register/register.component.scss
@@ -180,3 +180,21 @@ input:focus + label {
     background: #4A3DB5;
     color: #FFFFFF;
 }
+
+.nav-link {
+    color: #4A3DB5;
+    padding: 0rem;
+}
+
+.nav-link:hover {
+    color: #4A3DB5;
+    text-decoration: underline;
+}
+
+.viewall {
+    color: #4A3DB5;
+}
+
+a {
+    color: #4A3DB5;
+}
